--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="js/Modaal-master/source/css/modaal.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Employee Directory</title>
   </head>
   <body>
+    <header>
+      <h1 class="title">Awesome Startup Employee Directory</h1>
+      <input type="text" id="search" placeholder="Search for employees">
+    </header>
 
+    <div id="directory">
+      <!-- <div class="employee">
+        <img src="meKyoto.png" alt="img" class="img">
+        <div class="right">
+          <h3 class="name">Toshikazu Kato</h3>
+          <p class="email">abcdefg@gmail.com</p>
+          <p class="place">Yokohama</p>
+        </div>
+      </div> -->
+    </div>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/Modaal-master/source/js/modaal.js"></script>
   <script src="js/app.js"></script>
   </body>
 </html>
