--- a/index.html
+++ b/index.html
@@ -16,14 +16,28 @@
     </header>
 
     <div id="directory">
-      <!-- <div class="employee">
-        <img src="meKyoto.png" alt="img" class="img">
-        <div class="right">
-          <h3 class="name">Toshikazu Kato</h3>
-          <p class="email">abcdefg@gmail.com</p>
-          <p class="place">Yokohama</p>
-        </div>
-      </div> -->
+      <!-- <a href="#${empName}" class="modal" data-group="modal">
+            <div class="employee">
+              <img src="${emp.picture.medium}" alt="${empName}" class="img">
+              <div class="right">
+                <h3 class="name">${empName}</h3>
+                <p class="email">${emp.email}</p>
+                <p class="place">${emp.location.city}</p>
+              </div>
+            </div>
+            <div id="${empName}" style="display:none;">
+              <div class="modalContainer">
+                <img src="${emp.picture.medium}" alt="${empName}" class="img">
+                <h3 class="nameModal">${empName}</h3>
+                <p class="emailModal">${emp.email}</p>
+                <p class="placeModal">${emp.location.city}</p>
+                <hr>
+                <p class="cell">${emp.cell}</p>
+                <p class="address">${emp.location.street},${emp.location.state}, ${emp.location.postcode}</p>
+                <p class="birthday">Birthday: ${emp.dob.date.slice(5,7)}/${emp.dob.date.slice(8,10)}/${emp.dob.date.slice(0,4)}</p>
+              </div>
+            </div>
+          </a> -->
     </div>
 
 
