Remove jQuery and create modal
Remove jQuery that I was using for modal and create modal functions
with vanilla JavaScript.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="js/Modaal-master/source/css/modaal.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Employee Directory</title>
   </head>
@@ -16,33 +15,33 @@
     </header>
 
     <div id="directory">
-      <!-- <a href="#${empName}" class="modal" data-group="modal">
-            <div class="employee">
-              <img src="${emp.picture.medium}" alt="${empName}" class="img">
-              <div class="right">
-                <h3 class="name">${empName}</h3>
-                <p class="email">${emp.email}</p>
-                <p class="place">${emp.location.city}</p>
-              </div>
-            </div>
-            <div id="${empName}" style="display:none;">
-              <div class="modalContainer">
-                <img src="${emp.picture.medium}" alt="${empName}" class="img">
-                <h3 class="nameModal">${empName}</h3>
-                <p class="emailModal">${emp.email}</p>
-                <p class="placeModal">${emp.location.city}</p>
-                <hr>
-                <p class="cell">${emp.cell}</p>
-                <p class="address">${emp.location.street},${emp.location.state}, ${emp.location.postcode}</p>
-                <p class="birthday">Birthday: ${emp.dob.date.slice(5,7)}/${emp.dob.date.slice(8,10)}/${emp.dob.date.slice(0,4)}</p>
-              </div>
-            </div>
-          </a> -->
+      
+<!-- <div class="employee">
+        <img src="${emp.picture.medium}" alt="${empName}" class="img">
+        <div class="right">
+          <h3 class="name">${empName}</h3>
+          <p class="email">${emp.email}</p>
+          <p class="place">${emp.location.city}</p>
+        </div>
+      </div>
+
+      <div id="${empName}" class="modalContainer">
+        <span class="prev">&larr;</span>
+        <div class="modalContent">
+          <span class="close">&times;</span>
+          <img src="${emp.picture.medium}" alt="${empName}" class="img">
+          <h3 class="nameModal">${empName}</h3>
+          <p class="emailModal">${emp.email}</p>
+          <p class="placeModal">${emp.location.city}</p>
+          <hr>
+          <p class="cell">${emp.cell}</p>
+          <p class="address">${emp.location.street},${emp.location.state},${emp.location.postcode}</p>
+          <p class="birthday">Birthday: ${emp.dob.date.slice(5,7)}/${emp.dob.date.slice(8,10)}/${emp.dob.date.slice(0,4)}</p>
+        </div>
+        <span class="next">&rarr;</span>
+      </div> -->
+
     </div>
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/Modaal-master/source/js/modaal.js"></script>
   <script src="js/app.js"></script>
   </body>
 </html>
